# pydantic-stubs

./: .gitignore  .travis.yml  Makefile  README.md  README.rst  pyproject.toml  setup.py
pydantic-stubs/: __init__.pyi
