[tool.poetry]
name = "pydantic-stubs"
version = "0.1.0"
description = ""
authors = ["Vladimir Puzakov <vppuzakov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pydantic = "^0.12.1"

[tool.poetry.dev-dependencies]
mypy = "*"
flake8 = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
